--- a/ionic-chat-app/www/templates/app-chat.html
+++ b/ionic-chat-app/www/templates/app-chat.html
@@ -1,13 +1,13 @@
 <ion-view view-title="chat">
   <ion-content>
-    <div class="list">
-      <a collection-repeat="message in messages"
-        class="item item-avatar"
-        ng-class="{'other-chatbox' : message.external}">
-        <h2>{{message.name}}</h2>
-        <p>{{message.text}}</p>
-      </a>
-    </div>
+      <div class="list" scroll-bottom="messages">
+        <a collection-repeat="message in messages"
+           class="item item-avatar"
+           ng-class="{'other-chatbox' : message.external}">
+          <h2>{{message.name}}</h2>
+          <p>{{message.text}}</p>
+        </a>
+      </div>
   </ion-content>
   <div class="bar bar-footer bar-balanced">
     <label class="item-input-wrapper">
